--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
 <h1>View Demo &#128071;</h1>
 <p> HTML<a href="https://www.w3schools.com/HTML" target="_blank" class="course-link"> &#128073;</a></p>
- <p>CSS <a href=https://www.w3schools.com/css/               class="course-link"> &#128073;</a></p>
+ <p>CSS <a href=https://www.w3schools.com/css/   target="_blank"    class="course-link"> &#128073;</a></p>
  <p>JavaScript<a href="https://www.w3schools.com/js/" target="_blank" class="course-link"> &#128073;</a><p>
  and more from industry experts.</p>
         
